deploying-simple-apple-and-banana-ingress/apple-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apple
spec:
  selector:
    matchLabels:
      app: apple
  replicas: 2
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple
          image: jxlwqq/http-echo
          args:
            - "--text=apple"
          ports:
            - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: apple-svc
spec:
  selector:
    app: apple
  ports:
    - port: 8080
      targetPort: 8080
