deploying-simple-apple-and-banana-ingress/banana-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: banana
spec:
  selector:
    matchLabels:
      app: banana
  replicas: 2
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana
          image: jxlwqq/http-echo
          args:
            - "--text=banana"
          ports:
            - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: banana-svc
spec:
  selector:
    app: banana
  ports:
    - port: 8080
      targetPort: 8080
